--- a/static/src/views/check_in_calendar_common_view.xml
+++ b/static/src/views/check_in_calendar_common_view.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <templates xml:space="preserve">
     
+
+	<!--<t t-name="check_in_calendar_body" t-inherit="web.CalendarCommonPopover.footer" t-inherit-mode="primary" owl="1" >-->
+	
 	<t t-name="check_in_calendar" t-inherit="web.CalendarCommonPopover.footer" t-inherit-mode="primary" owl="1" >
 		<xpath expr="//t[@t-if='isEventDeletable']" position="after">
-			<t t-if="isNotDone">
+			<t t-if="isNotDone and isOwner">
 				<button class="btn btn-success me-1" t-on-click="openCheckIn" icon="fa-sign-in">
 					<span class="align-middle me-2 text-white">Check IN</span>
 					<i t-attf-class="fa fa-1x fa-sign-in align-middle"/>
 				</button>
 			</t>
+			<!--<div class="ribbon ribbon-top-right">
+            <span t-att-class="classes" t-att-title="props.title">
+                <t t-esc="props.text"/>
+            </span>
+        </div>-->
 		</xpath>
+		
+			<xpath expr="//t[@t-if='isEventEditable']/a[1]" position="replace">
+				<t t-if="isNotDone == true">
+					<a href="#" class="btn btn-primary o_cw_popover_edit" t-on-click="onEditEvent">Edit</a>
+				</t>
+				<t t-if="isNotDone == false">
+					<button class="btn btn-primary me-1" t-on-click="openSituation">
+						<span class="align-middle me-2 text-white">Edit</span>
+						<i t-attf-class="fa fa-1x align-middle"/>
+					</button>
+				</t>
+			</xpath>
+		
+		
 	</t>
     
 </templates>
