--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -314,7 +314,7 @@
                 <field name="check_step" invisible="True"/>
                 <div style="padding: 10px;margin-top: 30px;">
                     <button name="button_back_step" type="object" class="btn-primary m-1 btn-width-create-ccpp" string="Back" attrs="{'invisible': [('check_step', 'not in', ['2','3'])]}"/>
-                    <button name="button_next_step" type="object" class="btn-primary m-1 btn-width-create-ccpp" string="Next" attrs="{'invisible': [('is_critical', '=', False),('is_not_critical', '=', False)]}"/>
+                    <button name="button_next_step" type="object" class="btn-primary m-1 btn-width-create-ccpp" string="Next" attrs="{'invisible': [('is_critical', '=', False)]}"/>
                     <button name="button_back_to_list" type="object" class="btn-outline-primary m-1" string="Back To List" attrs="{'invisible': [('check_step', 'in', ['1']),('name','=',False)]}"/> 
                 </div>
                 </sheet>
@@ -691,7 +691,7 @@
                 <button name="button_reject_wizard" string="Reject" type="object" class="btn-danger" attrs="{'invisible': ['|',('is_show_approve','=',False),('state','!=','waiting_approve')]}"/><!--states="waiting_approve" groups="ccpp.group_ccpp_frontoffice_manager,ccpp.group_ccpp_backoffice_manager"/>-->
                 <button name="button_done" string="Done" type="object" class="btn-success" attrs="{'invisible': ['|','|',('state','!=','process'),('is_ccpp_done','=',False),('is_owner','=',False)]}" confirm="Are you sure to done this CCPP?"/>
                 <button name="button_cancel_wizard" string="Cancel" type="object" attrs="{'invisible': ['|',('state','not in',['open','process','done']),('is_owner','=',False)]}"/>
-                <button name="button_void_wizard" string="Void" type="object" attrs="{'invisible': ['|',('state','not in',['process']),('is_owner','=',False)]}"/>
+                <!--<button name="button_void_wizard" string="Void" type="object" attrs="{'invisible': ['|',('state','not in',['process']),('is_owner','=',False)]}"/>-->
                 <button name="button_to_open" string="To Open" type="object" class="btn-primary" attrs="{'invisible': ['|','|',('state', 'not in', ['reject','waiting_approve']),('is_owner', '=', False),('is_already_approve','=',True)]}"/>
             </xpath>
 
@@ -780,7 +780,7 @@
                 <field name="department_ids" widget="many2many_tags" attrs="{'readonly': [('state', 'in', ['waiting_approve','reject','process','done','cancel','delay','void'])], 'invisible': [('is_multi_host','=',False)]}" options="{'no_create':True}" domain="[('company_id','=',customer_company_id)]"/>
                 <field name="reason_reject" readonly="True" attrs="{'invisible': [('reason_reject','=',False)]}" style="color:red;"/>
                 <field name="reason_cancel" readonly="True" attrs="{'invisible': [('reason_cancel','=',False)]}" style="color:red;"/>
-                <field name="reason_void" readonly="True" attrs="{'invisible': [('reason_void','=',False)]}" style="color:red;"/>
+                <!--<field name="reason_void" readonly="True" attrs="{'invisible': [('reason_void','=',False)]}" style="color:red;"/>-->
                 <!--<field name="domain_job_position_ids" invisible="True"/>
                 <field name="job_position_id" domain="[('id','in',domain_job_position_ids)]" options="{'no_create': True, 'no_open': True}"/>-->
             </xpath>
@@ -1504,7 +1504,7 @@
                 <field name="is_show_strategy_approve" invisible="True"/>
                 <!--<button name="action_open_task2" type="object" title="View Strategy" string="View Strategy" class="btn btn-link float-end" attrs="{'invisible': [('parent.is_solution','=',False)]}"/>-->
                 <button name="button_send_approve_strategy" type="object" class="btn-primary" string="Send Approve Strategy" attrs="{'invisible': ['|','|',('state','!=','open'),('is_ccpp_on_process','=',False),('is_solution_on_approve','=',True)]}"/>
-                <button name="button_done" type="object" string="Done" class="btn-success ri-arrow-right-up-line me-2" attrs="{'invisible': ['|','|',('state','!=','process'),('is_delay','=',True),('is_owner','=',False)]}" confirm="Are you sure to done this strategy?"/>
+                <button name="button_done_wizard" type="object" string="Done" class="btn-success ri-arrow-right-up-line me-2" attrs="{'invisible': ['|','|',('state','!=','process'),('is_delay','=',True),('is_owner','=',False)]}" confirm="Are you sure to done this strategy?"/>
                 <button name="button_cancel_wizard" type="object" string="Cancel" class="btn-secondary-ccpp"   attrs="{'invisible': ['|','|',('state','not in',['open','process','done']),('is_delay','=',True),('is_owner','=',False)]}"/>
                 <button name="action_open_task2" type="object" title="View Task" string="View Task" class="btn btn-link float-end" attrs="{'invisible': [('parent.is_strategy','=',False)]}"/>
                 <!--<button name="unlink" icon="gtk-cancel" type="object" string="Delete"/>-->
@@ -1964,7 +1964,7 @@
                 <filter string="On Process" name="on_process" domain="[('state', '=', 'process')]"/>
                 <filter string="Done" name="done" domain="[('state','=','done')]"/>
                 <filter string="Cancelled" name="cancel" domain="[('state','=','cancel')]"/>
-                <filter string="Void" name="void" domain="[('state','=','void')]"/>
+                <!--<filter string="Void" name="void" domain="[('state','=','void')]"/>-->
                 <filter string="Delayed" name="delay" domain="[('is_delay','=',True)]"/>
                 <separator string="Department"/>
                 <filter string="ACC (ฝ่ายบัญชี)" name="acc" domain="[('department_id.code', '=', 'ACC')]"/>
@@ -2108,7 +2108,7 @@
                 <field name="state_color" invisible="1"/>
                 <field name="state" string="State" readonly="True" widget="status_with_color_ccpp" options="{'color_field': 'state_color'}"/>
                 <field name="is_owner" invisible="True"/>
-                <button name="button_done" type="object" string="Done" class="btn-success ri-arrow-right-up-line me-2" attrs="{'invisible': ['|',('state','!=','process'),('is_owner','=',False)]}" confirm="Are you sure to done this strategy?"/>
+                <button name="button_done_wizard" type="object" string="Done" class="btn-success ri-arrow-right-up-line me-2" attrs="{'invisible': ['|',('state','!=','process'),('is_owner','=',False)]}" confirm="Are you sure to done this strategy?"/>
                 <button name="button_cancel_wizard" type="object" string="Cancel" class="btn-secondary-ccpp"   attrs="{'invisible': ['|',('state','!=','process'),('is_owner','=',False)]}"/>
                 <!--<button name="action_open_strategy" type="object" title="View Detail" string="View Detail" class="btn btn-link float-end"/>-->
             </tree>
@@ -2142,7 +2142,7 @@
     </record>
 
     <record id="ccpp_report_tree_show_create_view" model="ir.ui.view">
-        <field name="name">ccpp.report.tree.view</field>
+        <field name="name">ccpp.report.tree.show.create.view</field>
         <field name="model">project.project</field>
         <field eval="201" name="priority"/>
         <field name="arch" type="xml">
@@ -2193,7 +2193,7 @@
     </record>
 
     <record id="ccpp_report_tree_hide_create_view" model="ir.ui.view">
-        <field name="name">ccpp.report.tree.view</field>
+        <field name="name">ccpp.report.tree.hide.create.view</field>
         <field name="model">project.project</field>
         <field eval="201" name="priority"/>
         <field name="arch" type="xml">
@@ -2216,7 +2216,7 @@
     </record>
 
     <record id="ccpp_report_tree_hide_create_view_manager_all_department" model="ir.ui.view">
-        <field name="name">ccpp.report.tree.view</field>
+        <field name="name">ccpp.report.tree.hide.create.view.manager.all.department</field>
         <field name="model">project.project</field>
         <field eval="202" name="priority"/>
         <field name="arch" type="xml">
@@ -2239,7 +2239,7 @@
     </record>
 
     <record id="ccpp_report_tree_hide_create_view_ceo" model="ir.ui.view">
-        <field name="name">ccpp.report.tree.view</field>
+        <field name="name">ccpp.report.tree.hide.create.view.ceo</field>
         <field name="model">project.project</field>
         <field eval="203" name="priority"/>
         <field name="arch" type="xml">
