--- a/views/ccpp_menu_replace_all.xml
+++ b/views/ccpp_menu_replace_all.xml
@@ -67,9 +67,9 @@
     </record>
 
     <!-- Expense -->
-    <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_root">
+    <!--<record model="ir.ui.menu" id="hr_expense.menu_hr_expense_root">
         <field name="groups_id" eval="[(6,0,[ref('base.group_system')])]"/>
-    </record>
+    </record>-->
 
     <!-- Link Tracker -->
     <record model="ir.ui.menu" id="utm.menu_link_tracker_root">
