--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -2344,7 +2344,7 @@
 
     <menuitem name="All CCPP" id="menu_all_ccpp_manager_ceo" groups="ccpp.group_ccpp_ceo" action="action_all_ccpp_group_by_priority_ceo" parent="project.menu_main_pm" sequence="4"/>
 
-    <!--<menuitem name="CCPP Dashboard" id="menu_ccpp_dashboard" action="action_ccpp_dashboard" parent="project.menu_main_pm" sequence="5"/>-->
+    <menuitem name="CCPP Dashboard" id="menu_ccpp_dashboard" action="action_ccpp_dashboard" groups="ccpp.group_ccpp_ceo" parent="project.menu_main_pm" sequence="5"/>
 
         <!--<menuitem name="All CCPP Group by Priority" id="menu_all_ccpp_group_by_priority_manager" parent="menu_all_ccpp_manager" action="action_all_ccpp_group_by_priority_manager" sequence="1"/>
 
